Table filter now works for every column

--- a/tablefilter/index.html
+++ b/tablefilter/index.html
@@ -489,7 +489,8 @@
                 "Age": "number",
                 "Height": "number",
                 "Weight": "number",
-                "Birthday": "date"
+                "Birthday": "date",
+                "Color": "select"
             }
         }
         addTableSearch('demo', config);
